# Vulkan-CSGO

./: .gitignore  .gitmodules  CMakeLists.txt  compile.sh  compile_shader.sh
src/: camera.cpp  camera.h  main.cpp
src/bsp/: bsp_loader.cpp  bsp_loader.h  bsp_rendering.cpp  bsp_rendering.h  bsp_shader.frag  bsp_shader.vert  vpk.cpp  vpk.h
src/dearimgui/: imgui_shader.frag  imgui_shader.vert  imgui_vulkan.cpp  imgui_vulkan.h
src/vulkan/: .vulkan_init.cpp.swp  vulkan_init.cpp  vulkan_init.h  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_utils.cpp  vulkan_utils.h
workdir/: bsp_frag.spv  bsp_vert.spv  imgui_frag.spv  imgui_vert.spv
